added websocket with channels and redis container

--- a/API/godeye/docker-compose.yml
+++ b/API/godeye/docker-compose.yml
@@ -1,6 +1,13 @@
 version: '3.8'
 
 services:
+  redis:
+    image: redis
+    container_name: godeye-redis
+    restart: on-failure
+    ports:
+      - "6379:6379"
+
   web:
     build: .
     container_name: godeye-web
@@ -13,6 +20,7 @@ services:
       - "8000:8000"
     depends_on:
       - db
+      - redis
 
   db:
     container_name: godeye-db
