--- a/API/godeye/requirements.txt
+++ b/API/godeye/requirements.txt
@@ -6,3 +6,7 @@ psycopg2==2.9.5
 django-cors-headers==3.14.0
 drf_spectacular==0.26.1
 djangorestframework-simplejwt==5.3.1
+daphne==4.0.0
+channels==4.0.0
+channels-redis==4.0.0
+redis==4.5.2
