--- a/API/godeye/requirements.txt
+++ b/API/godeye/requirements.txt
@@ -1,4 +1,3 @@
-numpy==1.20.0
 django==4.1.2
 djangorestframework==3.14.0
 django-filter==23.5
@@ -10,3 +9,5 @@ daphne==4.0.0
 channels==4.0.0
 channels-redis==4.0.0
 redis==4.5.2
+ninja==1.11.1.1
+numpy==1.20.0
