changed Dockerfile and reqs

--- a/API/godeye/Dockerfile
+++ b/API/godeye/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9.2
+FROM python:3.10
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED 1
@@ -7,8 +7,8 @@ ENV CRYPTOGRAPHY_DONT_BUILD_RUST=1
 WORKDIR /app
 COPY . /app
 
+RUN --mount=type=cache,target=/var/cache/apt apt-get update -y && apt-get install -y build-essential cmake
 RUN --mount=type=cache,target=/root/.cache/pip pip install --upgrade pip && pip install -r requirements.txt
-RUN --mount=type=cache,target=/var/cache/apt apt-get update -yqq && apt-get install -yqq build-essential cmake
 
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
