--- a/API/godeye/requirements.txt
+++ b/API/godeye/requirements.txt
@@ -12,5 +12,4 @@ channels-redis==4.0.0
 redis==4.5.2
 ninja==1.11.1.1
 numpy==1.26.3
-opencv-python==4.9.0.80
-face-recognition==1.3.0
+requests==2.31.0
