--- a/API/godeye/requirements.txt
+++ b/API/godeye/requirements.txt
@@ -12,5 +12,6 @@ channels-redis==4.0.0
 redis==4.5.2
 ninja==1.11.1.1
 numpy==1.26.3
-face-recognition==1.3.0
 pillow==10.2.0
+# dlib == 19.4.2
+# face-recognition == 1.3.0
