--- a/BOT/Dockerfile
+++ b/BOT/Dockerfile
@@ -6,6 +6,6 @@ COPY ./bot /app/bot
 COPY run.py /app
 COPY requirements.txt /app
 
-RUN pip install --upgrade pip && pip install -r requirements.txt
+RUN --mount=type=cache,target=/root/.cache/pip pip install --upgrade pip && pip install -r requirements.txt
 
 CMD [ "python3", "run.py"]
