--- a/API/godeye/requirements.txt
+++ b/API/godeye/requirements.txt
@@ -13,5 +13,5 @@ redis==4.5.2
 ninja==1.11.1.1
 numpy==1.26.3
 pillow==10.2.0
-# dlib == 19.4.2
-# face-recognition == 1.3.0
+dlib == 19.24.2
+face-recognition == 1.3.0
