--- a/API/godeye/docker-compose.yml
+++ b/API/godeye/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     networks:
       - godeye_net
     restart: always
+    volumes:
+      - ./postgres_data:/var/lib/postgresql/data/
     ports:
       - "5433:5432"
 
